--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventAlert.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventAlert.axml
@@ -2,6 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+    <TextView
+        android:text="Current Emergency:"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/currentEmergency" />
+    <android.webkit.WebView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/noticePage"
+        android:tag="Public Safety Notices" />
 </LinearLayout>
