Updated main activity to properly navigate to fragments. Added fragments for each view.

--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/MainPageNavigation.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/MainPageNavigation.axml
@@ -3,46 +3,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout" 
-    android:fitsSystemWindows="true" >
-  <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true">
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-      <android.support.v7.widget.Toolbar
-              android:id="@+id/toolbar"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:minHeight="?attr/actionBarSize"
-              android:background="?attr/colorPrimary"
-              android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-              app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        </LinearLayout>
     <!-- Main Content Here -->
-    <android.support.design.widget.CoordinatorLayout
-          android:id="@+id/main_content"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent">
-      <ListView
-          android:id="@+id/lvToDoList"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
-      <android.support.design.widget.FloatingActionButton
-          android:id="@+id/create_event"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="bottom|right"
-          android:layout_margin="16dp"
-          android:src="@drawable/ic_add"
-          app:layout_anchor="@id/lvToDoList"
-          app:layout_anchorGravity="bottom|right|end" />
-    </android.support.design.widget.CoordinatorLayout>
-  </LinearLayout>
-  <!-- Navigation Here -->
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/main_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+          <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/fragment_container"
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+          </LinearLayout>
+          <android.support.design.widget.FloatingActionButton
+              android:id="@+id/create_event"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="bottom|right"
+              android:layout_margin="16dp"
+              android:src="@drawable/ic_add"
+              app:layout_anchor="@id/fragment_container"
+              app:layout_anchorGravity="bottom|right|end" />
+        </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
+<!-- Navigation Here -->
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
