--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/MainPageNavigation.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/MainPageNavigation.axml
@@ -13,7 +13,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.Toolbar
+            <android.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,22 +27,20 @@
             android:id="@+id/main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-          <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/fragment_container"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-          </LinearLayout>
-          <android.support.design.widget.FloatingActionButton
-              android:id="@+id/create_event"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="bottom|right"
-              android:layout_margin="16dp"
-              android:src="@drawable/ic_add"
-              app:layout_anchor="@id/fragment_container"
-              app:layout_anchorGravity="bottom|right|end" />
+            <LinearLayout
+                android:id="@+id/fragment_container"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/create_event"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_add"
+                app:layout_anchor="@id/fragment_container"
+                app:layout_anchorGravity="bottom|right|end" />
         </android.support.design.widget.CoordinatorLayout>
     </LinearLayout>
 <!-- Navigation Here -->
