--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/MainPageNavigation.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/MainPageNavigation.axml
@@ -34,8 +34,6 @@
                 android:layout_height="match_parent" />
             <com.github.clans.fab.FloatingActionMenu
                 android:layout_alignParentRight="true"
-                android:layout_width="1dp"
-                android:layout_height="1dp"
                 android:layout_gravity="bottom|right"
                 android:layout_margin="16dp"
                 android:layout_width="wrap_content"
@@ -57,6 +55,13 @@
                     android:id="@+id/call_campus"
                     android:src="@drawable/ic_add"
                     app:fab_label="Not an Emergency"
+                    app:fab_size="mini" />
+                <com.github.clans.fab.FloatingActionButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/register_event"
+                    android:src="@drawable/ic_add"
+                    app:fab_label="Report An Event In Your Area"
                     app:fab_size="mini" />
             </com.github.clans.fab.FloatingActionMenu>
         </android.support.design.widget.CoordinatorLayout>
