--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventFAQ.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventFAQ.axml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/scroll"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">  
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -118,3 +123,4 @@
        android:layout_height="wrap_content"
        android:id="@+id/hazard_text" />
 </LinearLayout>
+</ScrollView>
