--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventAlert.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventAlert.axml
@@ -1,23 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:p1="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:p1="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     p1:orientation="vertical"
     p1:layout_width="match_parent"
     p1:layout_height="match_parent"
     p1:id="@+id/linearLayout1">
-    <TextView
-        p1:text="No Current Emergencies In Your Area"
-        p1:textAppearance="?android:attr/textAppearanceLarge"
+    <android.support.v7.widget.CardView
         p1:layout_width="match_parent"
-        p1:layout_height="wrap_content"
-        p1:id="@+id/inactive" />
-    <TextView
-        p1:text="There Is An Active Emergency In Your Area"
-        p1:textAppearance="?android:attr/textAppearanceLarge"
-        p1:layout_width="match_parent"
-        p1:layout_height="wrap_content"
-        p1:id="@+id/active" />
+        p1:layout_height="80dp"
+        p1:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true"
+        p1:id="@+id/text_card">
+        <RelativeLayout
+            p1:orientation="vertical"
+            p1:layout_width="match_parent"
+            p1:layout_height="match_parent">
+            <TextView
+                p1:text="No current emergencies in your area"
+                p1:textAppearance="?android:attr/textAppearanceLarge"
+                p1:layout_width="match_parent"
+                p1:layout_height="wrap_content"
+                p1:gravity="center"
+                p1:layout_gravity="center_horizontal"
+                p1:id="@+id/inactive" />
+            <TextView
+                p1:text="There is an active emergency in your area"
+                p1:textAppearance="?android:attr/textAppearanceLarge"
+                p1:layout_width="match_parent"
+                p1:layout_height="wrap_content"
+                p1:gravity="center"
+                p1:layout_gravity="center_horizontal"
+                p1:id="@+id/active" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
     <android.webkit.WebView
         p1:layout_width="match_parent"
-        p1:layout_height="match_parent"
-        p1:id="@+id/webView1" />
-</LinearLayout>
+        p1:layout_height="wrap_content"
+        p1:id="@+id/webView1"
+        p1:layout_below="@id/text_card" />
+</RelativeLayout>
