--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/Home.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/Home.axml
@@ -2,39 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:padding="5dp">
-  <android.support.v7.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_height="245dp"
-      android:layout_gravity="center_horizontal"
-      cardview:cardElevation="4dp"
-      cardview:cardCornerRadius="5dp"
-      cardview:cardUseCompatPadding="true">
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="240dp"
-        android:orientation="vertical"
-        android:padding="8dp">
-      <TextView
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:textAppearance="?android:attr/textAppearanceMedium"
-          android:textColor="#333333"
-          android:text="Welcome to Campus Safety!"
-          android:id="@+id/textView"
-          android:gravity="center"
-          android:layout_gravity="center_horizontal"
-          android:layout_marginLeft="5dp"
-          android:layout_marginBottom="10dp"/>
-      <ImageView
-          android:layout_width="fill_parent"
-          android:layout_height="180dp"
-          android:id="@+id/intro_image"
-          android:scaleType="centerCrop"
-          android:src="@drawable/safety_image"/>
-    </LinearLayout>
-  </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="245dp"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="240dp"
+            android:orientation="vertical"
+            android:padding="8dp">
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#333333"
+                android:text="Welcome to Campus Safety!"
+                android:id="@+id/textView"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="10dp" />
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="180dp"
+                android:id="@+id/intro_image"
+                android:scaleType="centerCrop"
+                android:src="@drawable/safety_image" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
