Wrapped EventFAQ text in cardviews. Did some cleanup.

--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventFAQ.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/EventFAQ.axml
@@ -1,126 +1,270 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      android:id="@+id/scroll"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">  
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scroll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
-    <TextView
-        android:text="Armed Individual"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:minWidth="25px"
+        android:minHeight="25px">
+      <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="toggle_contents"
-        android:id="@+id/armed_head" />
-    <TextView
-        android:text="@string/armed_text"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Armed Individual"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/armed_head" />
+          <TextView
+              android:text="@string/armed_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/armed_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/armed_text" />
-  <TextView
-        android:text="Medical Emergency"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Medical Emergency"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/medical_head" />
+          <TextView
+              android:text="@string/medical_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/medical_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="toggle_contents"
-        android:id="@+id/medical_head" />
-  <TextView
-       android:text="@string/medical_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/medical_text" />
-  <TextView
-      android:text="Fire"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:onClick="toggle_contents"
-      android:id="@+id/fire_head" />
-  <TextView
-       android:text="@string/fire_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/fire_text" />
-  <TextView
-      android:text="Power Outage"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:onClick="toggle_contents"
-      android:id="@+id/power_head" />
-  <TextView
-       android:text="@string/power_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/power_text" />
-  <TextView
-      android:text="Suspicious Activity"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:onClick="toggle_contents"
-      android:id="@+id/sus_head" />
-  <TextView
-       android:text="@string/sus_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/sus_text" />
-  <TextView
-      android:text="Distressed Individual"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:onClick="toggle_contents"
-      android:id="@+id/distressed_head" />
-  <TextView
-       android:text="@string/distressed_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/distressed_text" />
-  <TextView
-      android:text="Tornado "
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:onClick="toggle_contents"
-      android:id="@+id/tornado_head" />
-  <TextView
-       android:text="@string/tornado_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/tornado_text" />
-  <TextView
-      android:text="Hazardous Materials Release"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:onClick="toggle_contents"
-      android:id="@+id/hazard_head" />
-  <TextView
-       android:text="@string/hazard_text"
-       android:textAppearance="?android:attr/textAppearanceSmall"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/hazard_text" />
-</LinearLayout>
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Fire"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/fire_head" />
+          <TextView
+              android:text="@string/fire_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/fire_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Power Outage"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/power_head" />
+          <TextView
+              android:text="@string/power_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/power_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Suspicious Activity"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/sus_head" />
+          <TextView
+              android:text="@string/sus_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/sus_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Distressed Individual"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/distressed_head" />
+          <TextView
+              android:text="@string/distressed_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/distressed_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Tornado"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/tornado_head" />
+          <TextView
+              android:text="@string/tornado_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/tornado_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+      <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        cardview:cardElevation="4dp"
+        cardview:cardCornerRadius="5dp"
+        cardview:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+          <TextView
+              android:text="Hazardous Materials Release"
+              android:textAppearance="?android:attr/textAppearanceLarge"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:clickable="true"
+              android:onClick="toggle_contents"
+              android:gravity="center"
+              android:layout_gravity="center_horizontal"
+              android:layout_marginLeft="5dp"
+              android:layout_marginBottom="10dp"
+              android:id="@+id/hazard_head" />
+          <TextView
+              android:text="@string/hazard_text"
+              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/hazard_text" />
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
+    </LinearLayout>
 </ScrollView>
