--- a/CampusSafetyApp/CampusSafetyApp/Resources/layout/Home.axml
+++ b/CampusSafetyApp/CampusSafetyApp/Resources/layout/Home.axml
@@ -14,12 +14,12 @@
         cardview:cardCornerRadius="5dp"
         cardview:cardUseCompatPadding="true">
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="240dp"
             android:orientation="vertical"
             android:padding="8dp">
             <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#333333"
@@ -30,7 +30,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginBottom="10dp" />
             <ImageView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:id="@+id/intro_image"
                 android:scaleType="centerCrop"
